src/objects/Lead_Swarm_Rule__c.object
<CustomObject>
    <description>A rule indicating what users should auto-follow a Lead in Chatter.</description>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <label>Industry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Source__c</fullName>
        <label>Lead Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notify_on_Swarm__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>You will receive a Chatter message if you automatically follow a record.</inlineHelpText>
        <label>Notify on Swarm?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <label>Rating</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>All Leads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Only Leads with a certain Rating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Only Leads with a certain Status</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Only Leads from a certain Lead Source</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Only Leads for a certain Industry</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Lead_Swarm_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Lead Swarm Rule</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LSR-{0000}</displayFormat>
        <label>Lead Swarm Rule Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lead Swarm Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>